# kama-db

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/kdb/: manager.py  pytest_plugin.py  row.py  table.py
tests/: conftest.py  test_manager.py  test_row.py  test_table.py
